--- a/src/panels/Map/Map.module.css
+++ b/src/panels/Map/Map.module.css
@@ -18,6 +18,7 @@
   position: absolute;
   display: flex;
   gap: 10px;
+  align-items: center;
 }
 
 .point.vertical {
@@ -30,6 +31,8 @@
   position: relative;
   display: flex;
   justify-content: center;
+  width: 36px;
+  height: 28px;
 }
 
 .label {
@@ -55,6 +58,10 @@
   width: 115px;
 }
 
+.bubble img {
+  width: 100%;
+}
+
 .text {
   position: absolute;
   top: 0;
@@ -68,7 +75,7 @@
   padding: 0 5px;
   display: inline-flex;
   align-items: center;
-  height: 100%;
+  height: 35px;
   text-align: center;
   width: 100%;
   justify-content: center;
