--- a/src/panels/Map/Map.module.css
+++ b/src/panels/Map/Map.module.css
@@ -1,9 +1,10 @@
 .root {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   justify-content: center;
   background: #a4c9ff;
+  padding-bottom: 45px;
 }
 
 .root img {
