--- a/src/panels/Lesson/Lesson.module.css
+++ b/src/panels/Lesson/Lesson.module.css
@@ -24,9 +24,28 @@ h3 {
   font-weight: 400;
 }
 
+h1 {
+  margin-top: 4px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  margin: 0;
+  margin-bottom: 12px;
+}
+
 ol,
 p {
   margin: 0;
+}
+
+ol,
+ul {
+  padding-inline-start: 15px;
+}
+
+ul {
+  list-style-type: square;
 }
 
 li h2 {
@@ -35,6 +54,7 @@ li h2 {
   font-size: 20px;
   line-height: 17px;
   text-decoration: underline;
+  margin: 8px 0;
 }
 
 p,
