--- a/src/components/LessonNavigation/LessonNavigation.module.css
+++ b/src/components/LessonNavigation/LessonNavigation.module.css
@@ -1,11 +1,15 @@
 .root {
-  height: 32px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  z-index: 10;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
+  padding: 10px;
+  background: #fff8ee;
 }
 
 .pager {
